--- a/docs/slides/general-principles/code-basic.qmd
+++ b/docs/slides/general-principles/code-basic.qmd
@@ -199,7 +199,7 @@ Technical question of the block: <span class="highlight">how to think about and 
 This course block — talk mostly about <span class="highlight">code design</span>
 
 - Our three-step simulation anatomy
-- Design sketches: monolithic (today) and more extensible (next two lectures) 
+- Design sketches: monolithic (today) and more extensible (next lecture). Then organization and orchestration 
   
 
 ```{python} 
