Fix description in modular lecture

--- a/src/slides/general-principles/code-modular.qmd
+++ b/src/slides/general-principles/code-modular.qmd
@@ -46,7 +46,7 @@ open-graph:
 
 #### Learning Outcomes
 
-This lecture is a modular approach to designing simulation code
+This lecture is about a modular approach to designing simulation code
 
 <br>
 
